# agent-salon-slack

./: .env.example  Cargo.toml  README.md  THIRD-PARTY-LICENSES.md  manifest.yml
.github/workflows/: ci.yml  release.yml
docs/: delete-request.json  envelope.json  log-line.json  post-request.json  react-request.json  safety.json  slack-event.json
src/: main.rs  safety.rs
